<resources>
    <string name="app_name">HotelApp</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="room_info_more">Подробнее о номере</string>
    <string name="choose_room">Выбрать номер</string>
    <string name="most_important">Самое необходимое</string>
    <string name="what_not_included">Что не включено</string>
    <string name="to_choosing_room">К выбору номера</string>
    <string name="what_included">Что включено</string>
    <string name="comfortables">Удобства</string>
    <string name="about_the_hotel">Об отелe</string>
    <string name="star">star</string>
    <string name="hotel">Отель</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tourist">турист</string>
    <string name="booking">Бронирование</string>
    <string name="from_price_txt_format">от %1$s ₽</string>
    <string name="price_txt_format">%1$s ₽</string>
    <string name="rating_txt_format">%1$d %2$s</string>
    <string name="date_interval">%1$s – %2$s</string>
    <string name="dates">Даты</string>
    <string name="City_country">Страна, город</string>
    <string name="departure_from">Вылет из</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="number_of_nights_txt">%1$d ночей</string>
    <string name="room">Номер</string>
    <string name="super_txt">Супер!</string>
    <string name="order_result_txt">Подтверждение заказа №%1$d может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="nutrition">Питание</string>
    <string name="tour">Тур</string>
    <string name="fuel_charge">Топливный сбор</string>
    <string name="service_charge">Сервисный сбор</string>
    <string name="total_price">К оплате</string>
    <string name="add_new_tourist">Добавить туриста</string>
    <string name="data_protection_rich_txt">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="email">Почта</string>
    <string name="number">Номер</string>
    <string name="costumer_info">Информация о покупателе</string>
    <string name="not_all_fields_correct_warning">Не все поля правильно заполнены!</string>
    <string name="payment_btn_txt">Оплатить %1$s ₽</string>
    <string name="order_result_title_txt">Заказ оплачен</string>
    <string name="order_accepted">Ваш заказ принят в работу</string>
    <string name="tourist_count_txt">%1$s %2$s</string>
    <string name="date_birth">Дата рождения</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="citizenship">Гражданство</string>
    <string name="int_passport_number">Номер загранпаспорта</string>
    <string name="int_passport_expiration_date">Срок действия загранпаспорта</string>
</resources>