<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.order_result.OrderResultFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/top_go_back_btn"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/main_margin"
                android:layout_marginVertical="@dimen/small_margin"
                android:padding="@dimen/small_margin"
                android:contentDescription="@string/app_name"
                android:rotation="180"
                android:src="@drawable/round_arrow_forward_ios_24"
                android:focusable="true" />
            <TextView
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_medium"
                android:padding="10dp"
                tools:text="@string/order_result_title_txt"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_above="@id/bottom_bar"
        android:gravity="center"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/result_success_emoji"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/order_status"
            android:fontFamily="@font/sf_pro_display_medium"
            android:layout_marginHorizontal="25dp"
            tools:text="@string/order_accepted"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/result_text"
            android:layout_marginTop="@dimen/main_margin"
            android:fontFamily="@font/sf_pro_display_regular"
            android:layout_marginHorizontal="25dp"
            tools:text="@string/order_result_txt"
            android:textAlignment="center"
            android:textColor="@color/gray_text"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:dividerColor="@color/light_gray_stroke"/>
        <Button
            android:id="@+id/go_hotel_details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_margin"
            android:layout_below="@id/divider"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:padding="15dp"
            android:text="@string/super_txt"
            android:textSize="16sp"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="15dp">

        </Button>
    </RelativeLayout>
</RelativeLayout>